@@ -15,7 +15,7 @@ German
 Spanish
  * Dreslo
 French
- * ><))))*> (2007)
+ * ><((((*> (2007)
  * flashfr
  * systr
 Italian
